test/spec/const.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/const.wast
(;; STDOUT ;;;
out/test/spec/const.wast:8: assert_malformed passed:
  out/test/spec/const/const.2.wat:1:18: error: invalid literal "0x100000000"
  (func (i32.const 0x100000000) drop)
                   ^^^^^^^^^^^
out/test/spec/const.wast:12: assert_malformed passed:
  out/test/spec/const/const.3.wat:1:18: error: invalid literal "-0x80000001"
  (func (i32.const -0x80000001) drop)
                   ^^^^^^^^^^^
out/test/spec/const.wast:19: assert_malformed passed:
  out/test/spec/const/const.6.wat:1:18: error: invalid literal "4294967296"
  (func (i32.const 4294967296) drop)
                   ^^^^^^^^^^
out/test/spec/const.wast:23: assert_malformed passed:
  out/test/spec/const/const.7.wat:1:18: error: invalid literal "-2147483649"
  (func (i32.const -2147483649) drop)
                   ^^^^^^^^^^^
out/test/spec/const.wast:30: assert_malformed passed:
  out/test/spec/const/const.10.wat:1:18: error: invalid literal "0x10000000000000000"
  (func (i64.const 0x10000000000000000) drop)
                   ^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:34: assert_malformed passed:
  out/test/spec/const/const.11.wat:1:18: error: invalid literal "-0x8000000000000001"
  (func (i64.const -0x8000000000000001) drop)
                   ^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:41: assert_malformed passed:
  out/test/spec/const/const.14.wat:1:18: error: invalid literal "18446744073709551616"
  (func (i64.const 18446744073709551616) drop)
                   ^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:45: assert_malformed passed:
  out/test/spec/const/const.15.wat:1:18: error: invalid literal "-9223372036854775809"
  (func (i64.const -9223372036854775809) drop)
                   ^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:60: assert_malformed passed:
  out/test/spec/const/const.26.wat:1:18: error: invalid literal "0x1p128"
  (func (f32.const 0x1p128) drop)
                   ^^^^^^^
out/test/spec/const.wast:64: assert_malformed passed:
  out/test/spec/const/const.27.wat:1:18: error: invalid literal "-0x1p128"
  (func (f32.const -0x1p128) drop)
                   ^^^^^^^^
out/test/spec/const.wast:68: assert_malformed passed:
  out/test/spec/const/const.28.wat:1:18: error: invalid literal "0x1.ffffffp127"
  (func (f32.const 0x1.ffffffp127) drop)
                   ^^^^^^^^^^^^^^
out/test/spec/const.wast:72: assert_malformed passed:
  out/test/spec/const/const.29.wat:1:18: error: invalid literal "-0x1.ffffffp127"
  (func (f32.const -0x1.ffffffp127) drop)
                   ^^^^^^^^^^^^^^^
out/test/spec/const.wast:79: assert_malformed passed:
  out/test/spec/const/const.32.wat:1:18: error: invalid literal "1e39"
  (func (f32.const 1e39) drop)
                   ^^^^
out/test/spec/const.wast:83: assert_malformed passed:
  out/test/spec/const/const.33.wat:1:18: error: invalid literal "-1e39"
  (func (f32.const -1e39) drop)
                   ^^^^^
out/test/spec/const.wast:90: assert_malformed passed:
  out/test/spec/const/const.36.wat:1:18: error: invalid literal "340282356779733661637539395458142568448"
  (func (f32.const 340282356779733661637539395458142568448) drop)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:94: assert_malformed passed:
  out/test/spec/const/const.37.wat:1:18: error: invalid literal "-340282356779733661637539395458142568448"
  (func (f32.const -340282356779733661637539395458142568448) drop)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:107: assert_malformed passed:
  out/test/spec/const/const.46.wat:1:18: error: invalid literal "0x1p1024"
  (func (f64.const 0x1p1024) drop)
                   ^^^^^^^^
out/test/spec/const.wast:111: assert_malformed passed:
  out/test/spec/const/const.47.wat:1:18: error: invalid literal "-0x1p1024"
  (func (f64.const -0x1p1024) drop)
                   ^^^^^^^^^
out/test/spec/const.wast:115: assert_malformed passed:
  out/test/spec/const/const.48.wat:1:18: error: invalid literal "0x1.fffffffffffff8p1023"
  (func (f64.const 0x1.fffffffffffff8p1023) drop)
                   ^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:119: assert_malformed passed:
  out/test/spec/const/const.49.wat:1:18: error: invalid literal "-0x1.fffffffffffff8p1023"
  (func (f64.const -0x1.fffffffffffff8p1023) drop)
                   ^^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:126: assert_malformed passed:
  out/test/spec/const/const.52.wat:1:18: error: invalid literal "1e309"
  (func (f64.const 1e309) drop)
                   ^^^^^
out/test/spec/const.wast:130: assert_malformed passed:
  out/test/spec/const/const.53.wat:1:18: error: invalid literal "-1e309"
  (func (f64.const -1e309) drop)
                   ^^^^^^
out/test/spec/const.wast:137: assert_malformed passed:
  out/test/spec/const/const.56.wat:1:18: error: invalid literal "269653970229347356221791135597556535197105851288767494898376215204735891170042808140884337949150317257310688430271573696351481990334196274152701320055306275479074865864826923114368235135583993416113802762682700913456874855354834422248712838998185022412196739306217084753107265771378949821875606039276187287552"
  (func (f64.const 269653970229347356221791135597556535197105851288767494898376...
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:141: assert_malformed passed:
  out/test/spec/const/const.57.wat:1:18: error: invalid literal "-269653970229347356221791135597556535197105851288767494898376215204735891170042808140884337949150317257310688430271573696351481990334196274152701320055306275479074865864826923114368235135583993416113802762682700913456874855354834422248712838998185022412196739306217084753107265771378949821875606039276187287552"
  (func (f64.const -26965397022934735622179113559755653519710585128876749489837...
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/const.wast:151: assert_malformed passed:
  out/test/spec/const/const.62.wat:1:18: error: unexpected token "nan:1", expected a numeric literal (e.g. 123, -45, 6.7e8).
  (func (f32.const nan:1) drop)
                   ^^^^^
out/test/spec/const.wast:155: assert_malformed passed:
  out/test/spec/const/const.63.wat:1:18: error: unexpected token "nan:1", expected a numeric literal (e.g. 123, -45, 6.7e8).
  (func (f64.const nan:1) drop)
                   ^^^^^
out/test/spec/const.wast:160: assert_malformed passed:
  out/test/spec/const/const.64.wat:1:18: error: invalid literal "nan:0x0"
  (func (f32.const nan:0x0) drop)
                   ^^^^^^^
out/test/spec/const.wast:164: assert_malformed passed:
  out/test/spec/const/const.65.wat:1:18: error: invalid literal "nan:0x0"
  (func (f64.const nan:0x0) drop)
                   ^^^^^^^
out/test/spec/const.wast:169: assert_malformed passed:
  out/test/spec/const/const.66.wat:1:18: error: invalid literal "nan:0x80_0000"
  (func (f32.const nan:0x80_0000) drop)
                   ^^^^^^^^^^^^^
out/test/spec/const.wast:173: assert_malformed passed:
  out/test/spec/const/const.67.wat:1:18: error: invalid literal "nan:0x10_0000_0000_0000"
  (func (f64.const nan:0x10_0000_0000_0000) drop)
                   ^^^^^^^^^^^^^^^^^^^^^^^
330/330 tests passed.
;;; STDOUT ;;)
